# VisualPlugin-Gazebo-Test

./: AmbCom.cpp  App.cpp  CMakeLists.txt  VisualEdit.cpp  visual_edit.world
include/: VisualEdit.h
